--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,27 @@
+certifi==2025.4.26
+charset-normalizer==3.4.2
+exceptiongroup==1.3.0
+execnet==2.1.1
+greenlet==3.2.3
+idna==3.10
+iniconfig==2.1.0
+loguru==0.7.3
+packaging==25.0
+playwright==1.52.0
+pluggy==1.6.0
+py==1.11.0
+pyee==13.0.0
+Pygments==2.19.1
 pytest==7.4.0
+pytest-base-url==2.1.0
 pytest-html==3.2.0
+pytest-metadata==3.1.1
+pytest-playwright==0.7.0
 pytest-xdist==3.3.1
 python-dotenv==1.0.0
+python-slugify==8.0.4
+requests==2.32.4
+text-unidecode==1.3
+tomli==2.2.1
+typing_extensions==4.14.0
+urllib3==2.4.0
